--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Run",
             "type": "python",
             "request": "launch",
-            "program": "${cwd}/slots/app.py",
+            "program": "${cwd}/app.py",
             "console": "integratedTerminal",
             "justMyCode": true
         }
